<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InviteeManageFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnOrderPreserved="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowOrderPreserved="true">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout_inputs_inv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnOrderPreserved="true"
            app:layout_column="1"
            app:layout_row="1"
            app:rowOrderPreserved="true">

            <TextView
                android:id="@+id/input_inv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inv_subtitle_input"
                android:textSize="@dimen/subtitles_size"
                android:textStyle="bold"
                app:layout_column="1"
                app:layout_columnSpan="2"
                app:layout_gravity="center_vertical|center_horizontal"
                app:layout_row="1" />

            <TextView
                android:id="@+id/name_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="2" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_column="2"
                app:layout_gravity="center|top"
                app:layout_row="2" />

            <TextView
                android:id="@+id/lastname_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="3" />

            <EditText
                android:id="@+id/lastname_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/lastname_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_column="2"
                app:layout_gravity="center|top"
                app:layout_row="3" />

            <TextView
                android:id="@+id/phone_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="4" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/phone_hint"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_column="2"
                app:layout_gravity="center|top"
                app:layout_row="4" />

            <TextView
                android:id="@+id/email_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="5" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_column="2"
                app:layout_gravity="center|top"
                app:layout_row="5" />

            <Button
                android:id="@+id/button_enter_invitee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_invitee_button"
                app:layout_column="1"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal|center_vertical"
                app:layout_row="6" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout_deletions_inv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnOrderPreserved="true"
            app:layout_column="1"
            app:layout_row="2"
            app:rowOrderPreserved="true" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>