<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ManagementFragments.InviteeManageFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnOrderPreserved="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowOrderPreserved="true">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout_inputs_inv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnOrderPreserved="true"
            app:layout_column="1"
            app:layout_row="1"
            app:rowOrderPreserved="true">

            <TextView
                android:id="@+id/input_inv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eve_subtitle_input"
                android:textSize="@dimen/subtitles_size"
                android:textStyle="bold"
                app:layout_column="1"
                app:layout_columnSpan="3"
                app:layout_gravity="center_vertical|center_horizontal"
                app:layout_row="1" />

            <TextView
                android:id="@+id/event_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="2" />

            <EditText
                android:id="@+id/event_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/event_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_gravity="center|top"
                app:layout_row="2" />

            <TextView
                android:id="@+id/music_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="3" />

            <Switch
                android:id="@+id/music_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/on_off_input"
                android:textSize="20sp"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_gravity="center_vertical|center_horizontal"
                app:layout_row="3"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <CheckBox
                android:id="@+id/food_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/food_enter_short"
                android:textSize="18sp"
                app:layout_column="1"
                app:layout_row="4" />

            <CheckBox
                android:id="@+id/snack_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/snack_enter_short"
                android:textSize="18sp"
                app:layout_column="2"
                app:layout_row="4" />

            <CheckBox
                android:id="@+id/alcohol_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/alcohol_input_short"
                android:textSize="18sp"
                app:layout_column="3"
                app:layout_gravity="center_horizontal"
                app:layout_row="4" />

            <Button
                android:id="@+id/button_enter_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_event_input"
                app:layout_column="1"
                app:layout_columnSpan="3"
                app:layout_gravity="center_horizontal|center_vertical"
                app:layout_row="7" />

        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout_deletions_inv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnOrderPreserved="true"
            app:layout_column="1"
            app:layout_row="2"
            app:rowOrderPreserved="true" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>