<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ShopManageFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:columnOrderPreserved="true"
        app:rowOrderPreserved="true">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout_input_shop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_row="1"
            app:layout_column="1"
            app:columnOrderPreserved="true"
            app:rowOrderPreserved="true">

            <TextView
                android:id="@+id/input_shop_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_subtitle_input"
                android:textAlignment="viewStart"
                android:textSize="@dimen/subtitles_size"
                android:textStyle="bold"
                app:layout_column="1"
                app:layout_columnSpan="2"
                app:layout_gravity="center_vertical|center_horizontal"
                app:layout_row="1" />

            <TextView
                android:id="@+id/item_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_prompt"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="2" />

            <EditText
                android:id="@+id/item_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/item_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_column="2"
                app:layout_row="2" />

            <TextView
                android:id="@+id/type_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="3" />

            <Spinner
                android:id="@+id/type_spinner_input_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="11"
                android:minHeight="48dp"
                app:layout_column="2"
                app:layout_row="3"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/qty_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="4" />

            <EditText
                android:id="@+id/qty_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/qty_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                app:layout_column="2"
                app:layout_row="4" />

            <TextView
                android:id="@+id/aprox_prize_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp_price_enter"
                android:textSize="@dimen/enter_prompt_size"
                app:layout_column="1"
                app:layout_gravity="start|center_vertical"
                app:layout_row="5" />

            <EditText
                android:id="@+id/prize_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/price_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                app:layout_column="2"
                app:layout_gravity="start|center_vertical"
                app:layout_row="5" />

            <Button
                android:id="@+id/button_enter_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_shop_button"
                app:layout_column="1"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal|center_vertical"
                app:layout_row="6" />

        </androidx.gridlayout.widget.GridLayout>
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>