<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/item_prompt"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shoppingItem"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="textStart"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/type_enter"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shoppingType"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="textStart"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/qty_enter"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shoppingQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="textStart" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/exp_price_enter"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shoppingQPrize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="textStart"/>
    </TableRow>
</LinearLayout>